# OpenCL-Graph

./: CMakeLists.txt  params.txt
Examples/: CMakeLists.txt
Examples/Network/: CMakeLists.txt  Plot.py  SIR_Network_Example.cpp
Examples/PRNG/: CMakeLists.txt  PRNG_Example.cpp  Plot.py
Examples/SIR/: CMakeLists.txt  Plot.py  SIR_Example.cpp
Examples/SIR_Bernoulli/: Animate.py  CMakeLists.txt  Plot.py  SIR_Bernoulli.cpp  SIR_Bernoulli_test.cpp  params.txt
Graph/: CLG_graph_connect.cpp  CLG_graph_connect.hpp  CMakeLists.txt  graph_connect.cpp  graph_connect.hpp
Kernels/: CMakeLists.txt
Kernels/Debug_Examples/: Implicit_Double.clcpp  Implicit_Double.spv  compile.sh
Kernels/Distributions/: Distributions.cl  Distributions.clcpp
Kernels/Epidemiological/: CMakeLists.txt  SIR_Bernoulli_Network.bc  SIR_Bernoulli_Network.clcpp  SIR_Bernoulli_Network.hpp  SIR_Bernoulli_Network.ll  SIR_Bernoulli_Network.spv  SIR_Compute_Network.cl  SIR_Compute_Network.cpp  SIR_Compute_Stochastic.clcpp  SIR_Compute_Stochastic.spv  SIR_Compute_Stochastic_old.cl  SIR_Deterministic.cl  SIR_Stochastic.cl  SIR_Stochastic.clcpp  compile.sh  compile_cicc.bat  compile_gl.bat  compile_llvm.bat
Kernels/Examples/PRNG/: PRNG.cl
Kernels/Integrators/: CMakeLists.txt  ERK.bc  ERK.cl  ERK.cpp  ERK.ll  ERK.rspv  ERK.spv  ERK_old.cl  compile.bat  compile.sh  compile_readable.sh  graph.dot
Kernels/Network/: Advance.cl
Kernels/Utils/: vector.clcpp
Toolchains/: CFE_SPIRV_Compiler.cpp  CFE_SPIRV_Compiler.hpp  CMakeLists.txt  SIR_Bernoulli_Network.cpp  SIR_Bernoulli_Network.hpp
Utils/: CLG.hpp  CLG_Debug.hpp  CLG_DefaultInstance.hpp  CLG_FilePaths.hpp.in  CLG_Kernel_Generators.hpp  CLG_PRNG_Config.hpp  CLG_Util.hpp  CLG_Utils.hpp  CLG_directives.hpp  CL_Instance.hpp  CMakeLists.txt  Debug.hpp  FilePaths.hpp.in  FileToStr.hpp  Utils.hpp
cmake/: clg_utils-config.cmake
pkg/: clg_utils-config.cmake.in  opencl_graph-config.cmake.in
test/: CMakeLists.txt  ERK.spv  ERK4_test.cpp  Template_Integrator_Generator.cpp  Vertex_Integrator_Generator.cpp  kernel.spv
